--- a/plugin.ini
+++ b/plugin.ini
@@ -1,9 +1,11 @@
 [info]
-name="bibnum"
-author="Julien Sicot"
-description="Module spécifique à la gestion d'ouvrages numérisés dans Omeka : feuilletage, extraction ToC, recherche en texte intégral (KWIC), etc."
-link="http://bibnum.univ-rennes2.fr"
-omeka_minimum_version="1.0"
-omeka_tested_up_to="1.2.1"
-version="0.5"
-tags="visualization, books, digiatlization"
+name = "Live Book"
+author = "Julien Sicot (Université de Rennes 2) [bibnum 0.5], updated by Daniel Berthereau"
+description = "Manages scanned books with Omeka: zoom and flip of pages, extraction and displaying of table of contents from PDF, full text search from an XML content (KWIC), etc."
+license = "GPLv3"
+link = "https://github.com/Daniel-KM/LiveBook"
+support_link = "https://github.com/Daniel-KM/LiveBook/Issues"
+version = "0.8"
+omeka_minimum_version = "1.5"
+omeka_tested_up_to = "1.5"
+tags = "visualization, book, digitalization"
