--- a/plugin.ini
+++ b/plugin.ini
@@ -1,11 +1,11 @@
 [info]
 name = "Live Book"
-author = "Julien Sicot (Université de Rennes 2) [bibnum 0.5], updated by Daniel Berthereau"
+author = "Daniel Berthereau (from bibnum of Julien Sicot (Université de Rennes 2))"
 description = "Manages scanned books with Omeka: zoom and flip of pages, extraction and displaying of table of contents from PDF, full text search from an XML content (KWIC), etc."
-license = "GPLv3"
 link = "https://github.com/Daniel-KM/LiveBook"
 support_link = "https://github.com/Daniel-KM/LiveBook/Issues"
-version = "0.8"
-omeka_minimum_version = "1.5"
-omeka_tested_up_to = "1.5"
+license = "GPLv3"
+version = "2.8"
+omeka_minimum_version = "2.0"
+omeka_target_version = "2.0"
 tags = "visualization, book, digitalization"
